fix(toast): vertical and horizontal spacing

--- a/components/toast/index.css
+++ b/components/toast/index.css
@@ -12,47 +12,41 @@
  */
 
 .spectrum-Toast {
-	/* Hardcoded variables */
+	/* Font */
+	--spectrum-toast-font-family: var(--spectrum-sans-font-family-stack);
+	--spectrum-toast-font-style: var(--spectrum-default-font-style);
+	--spectrum-toast-font-size: var(--spectrum-font-size-100);
 	--spectrum-toast-font-weight: var(--spectrum-regular-font-weight);
 
 	/* Size */
-	--spectrum-toast-font-family: var(--spectrum-default-font-family);
-	--spectrum-toast-font-style: var(--spectrum-default-font-style);
-	--spectrum-toast-font-size: var(--spectrum-font-size-100);
 	--spectrum-toast-corner-radius: var(--spectrum-corner-radius-800);
-	--spectrum-toast-block-size: var(--spectrum-toast-height);
 	--spectrum-toast-icon-block-size: var(--spectrum-workflow-icon-size-100);
+	--spectrum-toast-min-block-size: var(--spectrum-toast-height);
 	--spectrum-toast-max-inline-size: var(--spectrum-toast-maximum-width);
 
 	--spectrum-toast-line-height: var(--spectrum-line-height-100);
 	--spectrum-toast-line-height-cjk: var(--spectrum-cjk-line-height-100);
 
 	/* Space */
-	--spectrum-toast-spacing-close-button-to-edge: var(--spectrum-spacing-100);
+	--spectrum-toast-spacing-toast-to-edge: var(--spectrum-spacing-300);
+	--spectrum-toast-spacing-close-button-to-end-edge: var(--spectrum-spacing-100);
 	--spectrum-toast-spacing-text-to-close-button: var(--spectrum-spacing-300);
-	--spectrum-toast-spacing-text-to-action-button-horizontal: var(--spectrum-spacing-400);
+	--spectrum-toast-spacing-text-to-button-vertical: var(--spectrum-spacing-100);
+	--spectrum-toast-spacing-text-to-button-horizontal: var(--spectrum-spacing-400);
+	--spectrum-toast-spacing-button-to-close-button-horizontal: var(--spectrum-spacing-200);
 	--spectrum-toast-spacing-icon-to-text: var(--spectrum-text-to-visual-300);
-
 	--spectrum-toast-spacing-start-edge-to-text-and-icon: var(--spectrum-spacing-300);
-	--spectrum-toast-spacing-action-button-to-close-button: var(--spectrum-spacing-200);
-
-	--spectrum-toast-spacing-top-edge-to-close-button: var(--spectrum-spacing-200);
-	--spectrum-toast-spacing-bottom-edge-to-close-button: var(--spectrum-spacing-200);
-
 	--spectrum-toast-spacing-top-edge-to-icon: var(--spectrum-toast-top-to-workflow-icon);
-
-	--spectrum-toast-spacing-block-start: var(--spectrum-spacing-200);
-	--spectrum-toast-spacing-block-end: var(--spectrum-spacing-200);
-
 	--spectrum-toast-spacing-top-edge-to-text: var(--spectrum-toast-top-to-text);
 	--spectrum-toast-spacing-bottom-edge-to-text: var(--spectrum-toast-bottom-to-text);
+	--spectrum-toast-spacing-top-edge-to-button: var(--spectrum-spacing-200);
+	--spectrum-toast-spacing-bottom-edge-to-button: var(--spectrum-spacing-200);
 
 	/* Color */
 	--spectrum-toast-background-color-default: var(--spectrum-neutral-subdued-background-color-default);
 	--spectrum-toast-negative-background-color-default: var(--spectrum-negative-background-color-default);
 	--spectrum-toast-positive-background-color-default: var(--spectrum-positive-background-color-default);
 	--spectrum-toast-informative-background-color-default: var(--spectrum-informative-background-color-default);
-
 	--spectrum-toast-text-and-icon-color: var(--spectrum-white);
 
 	--mod-closebutton-icon-color-default: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));
@@ -63,7 +57,9 @@
 	display: inline-flex;
 	flex-direction: row;
 	align-items: stretch;
-	min-block-size: var(--mod-toast-block-size, var(--spectrum-toast-block-size));
+	margin: var(--mod-toast-spacing-toast-to-edge, var(--spectrum-toast-spacing-toast-to-edge));
+	min-block-size: var(--mod-toast-min-block-size, var(--spectrum-toast-min-block-size));
+	min-inline-size: calc(var(--mod-toast-max-inline-size, var(--spectrum-toast-max-inline-size)) / 2);
 	max-inline-size: var(--mod-toast-max-inline-size, var(--spectrum-toast-max-inline-size));
 
 	border-radius: var(--mod-toast-corner-radius, var(--spectrum-toast-corner-radius));
@@ -80,6 +76,10 @@
 	background-color: var(--mod-toast-background-color-default, var(--spectrum-toast-background-color-default));
 	color: var(--mod-toast-background-color-default, var(--spectrum-toast-background-color-default));
 	overflow-wrap: anywhere;
+
+	&:not(:has(.spectrum-Button)) {
+		column-gap: var(--mod-toast-spacing-text-to-close-button, var(--spectrum-toast-spacing-text-to-close-button));
+	}
 }
 
 .spectrum-Toast--negative {
@@ -113,19 +113,12 @@
 
 .spectrum-Toast-content {
 	flex: 1 1 auto;
-	display: inline-block;
+	display: inline-flex;
 	box-sizing: border-box;
-
-	padding-block-start: calc(var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text)) - var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start)));
-	padding-block-end: calc(var(--mod-toast-spacing-bottom-edge-to-text, var(--spectrum-toast-spacing-bottom-edge-to-text)) - var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end)));
-
-	padding-inline-start: 0;
-
 	line-height: var(--mod-toast-line-height, var(--spectrum-toast-line-height));
-
 	text-align: start;
-
 	color: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));
+	padding-inline-start: 0;
 
 	&:lang(ja),
 	&:lang(zh),
@@ -134,29 +127,16 @@
 	}
 }
 
-.spectrum-Toast-buttons {
-	display: flex;
-	flex: 0 0 auto;
-	align-items: flex-start;
+.spectrum-CloseButton {
+	margin-block-start: var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text));
+	margin-block-end: var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text));
+	margin-inline-end: var(--mod-toast-spacing-close-button-to-end-edge, var(--spectrum-toast-spacing-close-button-to-end-edge));
 
-	margin-block-start: var(--mod-toast-spacing-top-edge-to-close-button, var(--spectrum-toast-spacing-top-edge-to-close-button));
-	margin-block-end: var(--mod-toast-spacing-bottom-edge-to-close-button, var(--spectrum-toast-spacing-bottom-edge-to-close-button));
-	padding-inline-start: var(--mod-toast-spacing-text-to-close-button, var(--spectrum-toast-spacing-text-to-close-button));
-	padding-inline-end: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
-
-	.spectrum-CloseButton {
-		align-self: flex-start;
-	}
+	flex-shrink: 0;
 }
 
 .spectrum-Toast .spectrum-Button {
-	margin-inline-start: var(--mod-toast-spacing-text-to-action-button-horizontal, var(--spectrum-toast-spacing-text-to-action-button-horizontal));
-}
-
-.spectrum-Toast:has(.spectrum-Button) {
-	.spectrum-Toast-buttons {
-		padding-inline-start: var(--mod-toast-spacing-action-button-to-close-button, var(--spectrum-toast-spacing-action-button-to-close-button));
-	}
+	margin-inline-end: var(--mod-toast-spacing-button-to-close-button-horizontal, var(--spectrum-toast-spacing-button-to-close-button-horizontal));
 }
 
 .spectrum-Toast-body {
@@ -165,12 +145,8 @@
 	align-items: center;
 	flex: 1 1 auto;
 	align-self: center;
-	justify-content: flex-end;
-
-	padding-block-start: var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start));
-	padding-block-end: var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end));
-
-	& + .spectrum-Toast-buttons {
-		padding-inline-start: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
-	}
+	column-gap: var(--mod-toast-spacing-text-to-button-horizontal, var(--spectrum-toast-spacing-text-to-button-horizontal));
+	row-gap: var(--mod-toast-spacing-text-to-button-vertical, var(--spectrum-toast-spacing-text-to-button-vertical));
+	padding-block-start: var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text));
+	padding-block-end: var(--mod-toast-spacing-bottom-edge-to-text, var(--spectrum-toast-spacing-bottom-edge-to-text));
 }
